[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
authors = ["tim fielding <gnidleif@gmail.com>"]

[lib]
name = "aoc_lib"
path =  "src/lib.rs"

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.14.0", features=["full"] }
http = "0.2.5"
tokio-test = "0.4.2"
itertools = "0.10.1"